Add image files and others.

--- a/index.html
+++ b/index.html
@@ -5,13 +5,16 @@
 layout: home
 ---
 
-<h2>Introduction</h2>
+<div class="page-section">
+<h2 class="section-title">Introduction</h2>
 <p>
+<img id="img-inner-orbit" src="images/orbits-points.png"
+      height="300" alt="inner energy flow"/>
 There are many good meditation practices, and a particular type is inner meditation.
 <!---->
 Unlike some techniques that use music or imagination of external images to help meditating, inner meditation emphasizes focusing on internal parts of a human body, watching to the parts and listening to the parts, namely, concentrating inward on something, not outside.
 <!---->
-It applies few fundamental techniques including breath, concentration, relaxation, body postures, and mental power to develop life energy, or <em>qi</em>.
+It applies few fundamental techniques in concert, which includes breath, concentration, relaxation, body postures, and mental power to develop life energy, or <em>qi</em>.
 <!---->
 The development of qi inside one's body enhances overall wellness of health and meanwhile leads to a path of spiritual enlightenment.
 </p>
@@ -21,14 +24,159 @@ Bringing all attention inward will cause profound changes to our body and mind  
 <!---->
 It develops a human's awareness.
 <!---->
-Being aware of internal states of the body and mind is of great power, because it represents the starting point of transforming one's negative emotion to positive energy.
+Being aware of internal states of the body and mind is of great power, because it represents the ability of transforming one's negative emotion to positive energy.
 <!---->
-When combined with conscious will power, the awareness is one of the most effective ways to cultivate life energy or qi; the qi in turns enhances the awareness.
+When combined with conscious will power, the awareness itself is one of the most effective ways to cultivate life energy or qi; the qi in turns enhances the ability of being aware.
 <!---->
 Of course, it also has relatively well-known benefits that one can obtain through meditation such as inner peace and enhanced concentration power.
 </p>
+</div>
 
-<h2>Important Body Parts</h2>
+<div class="page-section">
+<h2 class="section-title">Important Body Parts</h2>
+<p>
+Several parts of the body play very important roles in inner meditation, and they are the places on which we concentrate our full attention.
+
+One part is the bottom of a torso, centered around the perineum, which is also a meridian point.
+
+A second part is the spine, which goes from the tip of the tail bone all way up to the base of the skull.
+
+A third part is the <em>dan tian</em>, also called the center of the body, which is located behind the navel or the belly button and close to the spine.
+
+Other parts include the heart, the center of the brain, the top of the skull, and the central thrusting channel which goes up from the perineum to the top of the skull.
+</p>
 
 
-<h2>Basic Techniques</h2>
+<p>
+  Not all the parts are used together at the beginning of practices.
+
+  Basic practices normally involve the perineum, the spine, and the dan tian.
+
+  Others are targets of more advanced practices.
+</p>
+
+
+<img src="images/organs.png" id="img-organs" height="180" alt="organs"/>
+<h3 class="section-subtitle">Organs</h3>
+<p>
+Organs also play an important role in inner meditation because they are tightly connected to emotion and subtle psychological activities.
+
+The organs that we meditate about are the liver, heart, spleen, lungs, and kidneys.
+</p>
+</div>
+
+<div class="page-section">
+<h2 class="section-title">Basic Practices</h2>
+
+<p>Inner meditation has a broad range of practices, and we do not even attempt to present a comprehensive list of concrete methods.
+
+However, they do share some common characteristics which we discuss in the <a href="resources.html">Resources</a> page.
+
+
+<p>In order to give a concrete picture of what an inner meditation practice may look like, this section describes one of the simplest but extremely powerful method: the Yin Yang Breath.
+
+It roughly consists of the following steps:
+<ol>
+<li>Prepare a good body posture that emphasizes an upright and straight spine, a smiling face, and relaxed body muscles.
+
+<li>
+  <img src="images/taiji-blue-red.png" id="img-taiji" height="150"
+        alt="yin yang breath as if in tain ji"/>
+Become aware of your breath and know the inhalation and exhalation process.
+
+Elongate the exhalation process by making it slowly and smoothly; meanwhile focuses all intention on perineum.
+
+At the end of exhalation, hold the breath until cannot hold, and then release the whole body to let it inhale naturally.
+
+When the body starts the next cycle of breath, repeat the same procedure.
+
+This is so called the yin breath because the attention and awareness are focused on the exhalation process (exhalation is represented by yin).
+
+After some time, go to the next step.
+
+<li>Lengthen the inhalation process by making it slowly and smoothly; meanwhile focuses all intention on perineum.
+
+At the end of inhalation, hold the breath until cannot hold, and then release the whole body to let it exhale naturally.
+
+When the body starts the next cycle of breath, repeat the same procedure.
+
+This is so called the yang breath because the attention and awareness are focused on the inhalation process (inhalation is represented by yang).
+
+This step is normally as twice long as the yin breath.
+
+<li>Prepare to finish.
+
+Be aware of the breath and let it go naturally and use both hands to cover the navel.
+
+Keep the entire body relaxed.
+
+For male, circle both hands around the navel counterclockwise 36 times and then 36 times in the opposite direction.
+
+For female, circle clockwise first and then counterclockwise.
+</ol>
+</p>
+
+
+<p>
+Another example technique is the inner smile, which involves meditating about each organ mentioned above and transforms negative emotion into positive energy.
+</p>
+
+<p>
+<strong>Please note</strong> that just like learning any body or mind related work it may not be beneficial or even risky if you learn on your own because you may not do the right practices.
+
+The most effective way of learning such skill is studying from an instructor in person, so that any inappropriate movements can be corrected promptly.
+</p>
+</div>
+
+<div class="page-section">
+<h2 class="section-title">Other Body Works</h2>
+<p>
+Inner meditation regards the body as fundamental building materials for good overall wellness and spiritual advances.
+
+Therefore, methods that exercise the body can assist and be beneficial to inner meditation practices.
+
+These are some example exercises (but not limited to):
+<ul>
+  <li>Tai Ji</li>
+  <li>Yaga</li>
+  <li>Martial arts</li>
+  <li>Doing a sport with good form and attention</li>
+  <li>Working out with good form and attention</li>
+</ul>
+</p>
+</div>
+
+
+<div class="page-section">
+<h2 class="section-title">Inner Meditation Classes</h2>
+<p>
+A series of inner meditation classes will be taught at <a href="http://www.artsunitymovements.com/aum-center/">Arts Unity Movements Center</a> every Saturday at 10am starting on December 3.
+
+More information of the class is available on the <a href="event.html">Event</a> page.
+</p>
+
+<table>
+<tr><td>Address:</td>
+<td><address>149 South Blvd, San Mateo, CA 94402</address></td>
+</tr>
+<!--
+<tr><td>Time:</td>
+<td>10:00-11:00am every Saturday unless announced otherwise</td>
+</tr>
+<tr><td>Starting date:</td>
+<td>December 3, 2016</td>
+</tr>
+<tr><td>Instructor:</td>
+<td>Lewis Young</td>
+</tr>
+</tr>
+<tr><td>Fee:</td>
+<td>$5-10 sliding-scale donation.
+However, AUM's spirit is that no one is ever turned away due to lack of fund.</td>
+</tr>
+ -->
+</table>
+
+<p>
+</p>
+</div>
