Make pictures smaller

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@ The organs that we meditate about are the liver, heart, spleen, lungs, and kidne
 
 <p>Inner meditation has a broad range of practices, and we do not even attempt to present a comprehensive list of concrete methods.
 
-However, they do share some common characteristics which we discuss in the <a href="resources.html">Resources</a> page.
+However, they do share some common characteristics which we discuss on the <a href="resource.html">Resource</a> page.
 
 
 <p>In order to give a concrete picture of what an inner meditation practice may look like, this section describes one of the simplest but extremely powerful method: the Yin Yang Breath.
