Add event and skeleton page.

--- a/event.html
+++ b/event.html
@@ -3,4 +3,95 @@ layout: page
 title:  Event
 date:   2016-11-24 10:06:33 -0800
 ---
-Inner meditation is
+
+<div class="page-introduction">
+<h2 class="section-title">Classes</h2>
+<p>
+<a href="http://www.artsunitymovements.com/aum-center/">Arts Unity Movements Center</a> kindly provides a venue for teaching inner meditation practices.
+
+Two classes will be available.
+
+The first one is <strong>Basics of Inner Meditation</strong>, which is like knowing ABC for learning English.
+
+It provides students with detailed step-by-step instruction on how to practice a meditation session.
+
+Its goal is to teach useful inner meditation techniques so that students will be able to practice on their own at home after classes.
+</p>
+
+<p>
+The second class is <strong>Intermediate Inner Meditation</strong>.
+
+As its name implies, it targets to people who have done inner meditation practices extensively and want to keep at or advance to certain level.
+
+The minimum requirement for this class is that a person can meditate by herself for 50 minutes without requiring any instructions.
+
+This class does not provide detailed instructions of how to practice meditation; instead, a person simply joins the class group and practice the way he normally does.
+
+Occasionally, some special topics or techniques might be introduced and practiced in the class.
+</p>
+</div>
+
+
+<div class="page-section">
+<h2 class="section-title">Schedule</h2>
+
+Class schedules are summarized as follows.
+
+<table>
+  <caption class="class-name">Basics of Inner Meditation</caption>
+<tr>
+  <td>Address:</td>
+  <td><address>149 South Blvd, San Mateo, CA 94402</address></td>
+</tr>
+<tr>
+  <td>Time:</td>
+  <td>10:00-11:00am every Saturday unless announced otherwise</td>
+</tr>
+<tr><td>Starting date:</td>
+<td>December 3, 2016</td>
+</tr>
+<tr><td>Instructor:</td>
+<td>Lewis Young</td>
+</tr>
+</tr>
+<tr><td>Fee:</td>
+<td>$5-10 sliding-scale<sup>*</sup></td>
+</tr>
+</table>
+
+
+<table>
+  <caption class="class-name">Intermediate Inner Meditation</caption>
+<tr>
+  <td>Address:</td>
+  <td><address>149 South Blvd, San Mateo, CA 94402</address></td>
+</tr>
+<tr>
+  <td>Time:</td>
+  <td>11:00am-12:00pm every Saturday unless announced otherwise</td>
+</tr>
+<tr><td>Starting date:</td>
+<td>December 3, 2016</td>
+</tr>
+<tr><td>Instructor:</td>
+<td>Lewis Young</td>
+</tr>
+</tr>
+<tr><td>Fee:</td>
+<td>$5-10 sliding-scale<sup>*</sup></td>
+</tr>
+</table>
+
+<su>*</sup>A sliding-scale fee means you pay according to your ability.
+
+AUM's policy is that no one is ever turned away due to lack of fund.
+
+If you are curious about this policy then you should check out this <a href="http://www.artsunitymovements.com/">awesome organization</a>.
+</div>
+
+<!--
+<div class="page-section">
+<h2 class="section-title">Instructor Bio</h2>
+Lewis Young has practiced meditation for more than a decade. He practiced Qi Gong and was able to heal when he was a university student. Later he studied Taoist inner alchemy and Buddhist Zen meditation. He has taught Taoist inner meditation classes ranging from basics to advanced levels. He holds a Ph.D. degree in Computer Science, and he is good at understanding spiritual tradition with scientific attitude. His teaching style is using simple contemporary concepts to explain inner meditation practices that are considered mysterious.
+</div>
+-->
