--- a/resource.html
+++ b/resource.html
@@ -1,4 +1,25 @@
 ---
 title: Resource
 ---
-A placeholder.
+<div class="page-introduction">
+<h2 class="section-title">Body and Mind</h2>
+<p>
+</div>
+
+
+<div class="page-section">
+<h2 class="section-title">Inner Meditatioin Tradition</h2>
+<p>
+</div>
+
+
+<div class="page-section">
+<h2 class="section-title">Inner Meditation vs Relegion</h2>
+<p>
+</div>
+
+
+<div class="page-section">
+<h2 class="section-title">Experiment with a Scientific Approach</h2>
+<p>
+</div>
