Fix some typos.

--- a/event.html
+++ b/event.html
@@ -2,6 +2,7 @@
 layout: page
 title:  Event
 date:   2016-11-24 10:06:33 -0800
+permalink: /event/
 ---
 
 <div class="page-introduction">
@@ -9,25 +10,25 @@ date:   2016-11-24 10:06:33 -0800
 <p>
 <a href="http://www.artsunitymovements.com/aum-center/">Arts Unity Movements Center</a> kindly provides a venue for teaching inner meditation practices.
 
-Two classes will be available.
+Two classes are available.
 
 The first one is <strong>Basics of Inner Meditation</strong>, which is like knowing ABC for learning English.
 
-It provides students with detailed step-by-step instruction on how to practice a meditation session.
+It provides students with detailed, step-by-step instructions of how to practice inner meditation.
 
-Its goal is to teach useful inner meditation techniques so that students will be able to practice on their own at home after classes.
+Its goal is to teach useful techniques so that students will be able to practice on their own at home after learning the class.
 </p>
 
 <p>
 The second class is <strong>Intermediate Inner Meditation</strong>.
 
-As its name implies, it targets to people who have done inner meditation practices extensively and want to keep at or advance to certain level.
+As its name suggests, it targets to people who have practiced inner meditation extensively and want to keep at or advance to certain levels.
 
 The minimum requirement for this class is that a person can meditate by herself for 50 minutes without requiring any instructions.
 
-This class does not provide detailed instructions of how to practice meditation; instead, a person simply joins the class group and practice the way he normally does.
+This class does not provide detailed instructions of how to practice meditation; instead, a person simply joins the class group and practises the way he normally does.
 
-Occasionally, some special topics or techniques might be introduced and practiced in the class.
+From time to time, the class will introduce and practise some special topics or techniques.
 </p>
 </div>
 
