--- a/resource.html
+++ b/resource.html
@@ -1,5 +1,6 @@
 ---
 title: Resource
+permalink: /resource/
 ---
 <div class="page-introduction">
 <h2 class="section-title">Body and Mind</h2>
@@ -22,4 +23,23 @@ title: Resource
 <div class="page-section">
 <h2 class="section-title">Experiment with a Scientific Approach</h2>
 <p>
+</div>
+
+
+<div class="page-section">
+<h2 class="section-title">Other Body Works</h2>
+<p>
+Inner meditation regards the body as fundamental building materials for good overall wellness and spiritual advances.
+
+Therefore, methods that exercise the body can assist and be beneficial to inner meditation practices.
+
+These are some example exercises (but not limited to):
+<ul>
+  <li>Tai Ji</li>
+  <li>Yaga</li>
+  <li>Martial arts</li>
+  <li>Doing a sport with good form and attention</li>
+  <li>Working out with good form and attention</li>
+</ul>
+</p>
 </div>
