--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 layout: home
 ---
 
-<div class="page-section">
+<div class="page-introduction">
 <h2 class="section-title">Introduction</h2>
 <p>
 <img id="img-inner-orbit" src="images/orbits-points.png"
@@ -14,13 +14,13 @@ There are many good meditation practices, and a particular type is inner meditat
 <!---->
 Unlike some techniques that use music or imagination of external images to help meditating, inner meditation emphasizes focusing on internal parts of a human body, watching to the parts and listening to the parts, namely, concentrating inward on something, not outside.
 <!---->
-It applies few fundamental techniques in concert, which includes breath, concentration, relaxation, body postures, and mental power to develop life energy, or <em>qi</em>.
+It applies few fundamental techniques in concert, which include breath, concentration, relaxation, body postures, and mental power to develop life energy, or <em>qi</em>.
 <!---->
-The development of qi inside one's body enhances overall wellness of health and meanwhile leads to a path of spiritual enlightenment.
+The development of qi inside one's body enhances overall wellness of health and leads to a path of spiritual enlightenment.
 </p>
 
 <p>
-Bringing all attention inward will cause profound changes to our body and mind  gradually.
+Bringing all attention inward will cause profound changes to our body and mind gradually.
 <!---->
 It develops a human's awareness.
 <!---->
@@ -28,7 +28,7 @@ Being aware of internal states of the body and mind is of great power, because i
 <!---->
 When combined with conscious will power, the awareness itself is one of the most effective ways to cultivate life energy or qi; the qi in turns enhances the ability of being aware.
 <!---->
-Of course, it also has relatively well-known benefits that one can obtain through meditation such as inner peace and enhanced concentration power.
+Of course, it also has relatively well-known benefits that one can obtain through meditation such as heartsease and enhanced concentration power.
 </p>
 </div>
 
@@ -37,7 +37,7 @@ Of course, it also has relatively well-known benefits that one can obtain throug
 <p>
 Several parts of the body play very important roles in inner meditation, and they are the places on which we concentrate our full attention.
 
-One part is the bottom of a torso, centered around the perineum, which is also a meridian point.
+One part is the bottom of the torso, centered around the perineum, which is also a meridian point.
 
 A second part is the spine, which goes from the tip of the tail bone all way up to the base of the skull.
 
@@ -70,47 +70,47 @@ The organs that we meditate about are the liver, heart, spleen, lungs, and kidne
 
 <p>Inner meditation has a broad range of practices, and we do not even attempt to present a comprehensive list of concrete methods.
 
-However, they do share some common characteristics which we discuss on the <a href="resource.html">Resource</a> page.
+However, they do share some common characteristics which we discuss on the <a href="/resource/">Resource</a> page.
 
 
 <p>In order to give a concrete picture of what an inner meditation practice may look like, this section describes one of the simplest but extremely powerful method: the Yin Yang Breath.
 
 It roughly consists of the following steps:
 <ol>
-<li>Prepare a good body posture that emphasizes an upright and straight spine, a smiling face, and relaxed body muscles.
+<li>Prepare a good body posture that emphasizes an upright and straight spine, a smiling face, and a relaxed whole body.
 
 <li>
   <img src="images/taiji-blue-red.png" id="img-taiji" height="150"
         alt="yin yang breath as if in tain ji"/>
 Become aware of your breath and know the inhalation and exhalation process.
 
-Elongate the exhalation process by making it slowly and smoothly; meanwhile focuses all intention on perineum.
+Elongate the exhalation process by making it slowly and smoothly; meanwhile focus all intention on perineum.
 
-At the end of exhalation, hold the breath until cannot hold, and then release the whole body to let it inhale naturally.
+At the end of exhalation, hold the breath until cannot hold, and then release the entire body to let it inhale naturally.
 
 When the body starts the next cycle of breath, repeat the same procedure.
 
-This is so called the yin breath because the attention and awareness are focused on the exhalation process (exhalation is represented by yin).
+This is so called the yin breath because the attention and awareness focus on the exhalation process, and exhalation belongs to yin.
 
 After some time, go to the next step.
 
-<li>Lengthen the inhalation process by making it slowly and smoothly; meanwhile focuses all intention on perineum.
+<li>Lengthen the inhalation process by making it slowly and smoothly; meanwhile focus all intention on perineum.
 
-At the end of inhalation, hold the breath until cannot hold, and then release the whole body to let it exhale naturally.
+At the end of inhalation, hold the breath until cannot hold, and then release the entire body to let it exhale naturally.
 
 When the body starts the next cycle of breath, repeat the same procedure.
 
-This is so called the yang breath because the attention and awareness are focused on the inhalation process (inhalation is represented by yang).
+This is the yang breath because the attention and awareness focus on the inhalation process, and inhalation belongs to yang.
 
 This step is normally as twice long as the yin breath.
 
-<li>Prepare to finish.
+<li>Finish up.
 
 Be aware of the breath and let it go naturally and use both hands to cover the navel.
 
 Keep the entire body relaxed.
 
-For male, circle both hands around the navel counterclockwise 36 times and then 36 times in the opposite direction.
+For male, circle both hands around the navel 36 times counterclockwise and then 36 times in the opposite direction.
 
 For female, circle clockwise first and then counterclockwise.
 </ol>
@@ -122,27 +122,9 @@ Another example technique is the inner smile, which involves meditating about ea
 </p>
 
 <p>
-<strong>Please note</strong> that just like learning any body or mind related work it may not be beneficial or even risky if you learn on your own because you may not do the right practices.
+<strong>Please note:</strong> just like learning any body or mind related work it may not be beneficial or even risky if you learn on your own because you may not do the right practices.
 
 The most effective way of learning such skill is studying from an instructor in person, so that any inappropriate movements can be corrected promptly.
-</p>
-</div>
-
-<div class="page-section">
-<h2 class="section-title">Other Body Works</h2>
-<p>
-Inner meditation regards the body as fundamental building materials for good overall wellness and spiritual advances.
-
-Therefore, methods that exercise the body can assist and be beneficial to inner meditation practices.
-
-These are some example exercises (but not limited to):
-<ul>
-  <li>Tai Ji</li>
-  <li>Yaga</li>
-  <li>Martial arts</li>
-  <li>Doing a sport with good form and attention</li>
-  <li>Working out with good form and attention</li>
-</ul>
 </p>
 </div>
 
@@ -150,9 +132,9 @@ These are some example exercises (but not limited to):
 <div class="page-section">
 <h2 class="section-title">Inner Meditation Classes</h2>
 <p>
-A series of inner meditation classes will be taught at <a href="http://www.artsunitymovements.com/aum-center/">Arts Unity Movements Center</a> every Saturday at 10am starting on December 3.
+A series of inner meditation classes will be available at <a href="http://www.artsunitymovements.com/aum-center/">Arts Unity Movements Center</a> every Saturday at 10am starting on December 3, 2016.
 
-More information of the class is available on the <a href="event.html">Event</a> page.
+The <a href="/event/">Event</a> page has more information of the classes.
 </p>
 
 <table>
