--- a/event.html
+++ b/event.html
@@ -55,8 +55,8 @@ Class schedules are summarized as follows.
 <td>Lewis Young</td>
 </tr>
 </tr>
-<tr><td>Fee:</td>
-<td>$5-10 sliding-scale<sup>*</sup></td>
+<tr><td>Donation:</td>
+<td>$5-10<sup>*</sup></td>
 </tr>
 </table>
 
@@ -78,12 +78,12 @@ Class schedules are summarized as follows.
 <td>Lewis Young</td>
 </tr>
 </tr>
-<tr><td>Fee:</td>
-<td>$5-10 sliding-scale<sup>*</sup></td>
+<tr><td>Donation:</td>
+<td>$5-10<sup>*</sup></td>
 </tr>
 </table>
 
-<su>*</sup>A sliding-scale fee means you pay according to your ability.
+<su>*</sup>Please make a donation based on your ability.
 
 AUM's policy is that no one is ever turned away due to lack of fund.
 
