--- a/resource.html
+++ b/resource.html
@@ -5,35 +5,39 @@ permalink: /resource/
 <div class="page-introduction">
 <h2 class="section-title">Body and Mind</h2>
 <p>
+</p>
 </div>
 
 
 <div class="page-section">
 <h2 class="section-title">Inner Meditatioin Tradition</h2>
 <p>
+</p>
 </div>
 
 
 <div class="page-section">
 <h2 class="section-title">Inner Meditation vs Relegion</h2>
 <p>
+</p>
 </div>
 
 
 <div class="page-section">
 <h2 class="section-title">Experiment with a Scientific Approach</h2>
 <p>
+</p>
 </div>
 
 
 <div class="page-section">
-<h2 class="section-title">Other Body Works</h2>
+<h2 class="section-title">Beneficial Works</h2>
 <p>
 Inner meditation regards the body as fundamental building materials for good overall wellness and spiritual advances.
 
 Therefore, methods that exercise the body can assist and be beneficial to inner meditation practices.
 
-These are some example exercises (but not limited to):
+These are some example exercises, but not limited to:
 <ul>
   <li>Tai Ji</li>
   <li>Yaga</li>
