Add fee section and instructor bio

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@ Other parts include the heart, the center of the brain, the top of the skull, an
 </p>
 
 
-<img src="images/organs.png" id="img-organs" height="180" alt="organs"/>
+<img src="images/organs.png" id="img-organs" height="250" alt="organs"/>
 <h3 class="section-subtitle">Organs</h3>
 <p>
 Organs also play an important role in inner meditation because they are tightly connected to emotion and subtle psychological activities.
@@ -80,7 +80,7 @@ It roughly consists of the following steps:
 <li>Prepare a good body posture that emphasizes an upright and straight spine, a smiling face, and a relaxed whole body.
 
 <li>
-  <img src="images/taiji-blue-red.png" id="img-taiji" height="150"
+  <img src="images/taiji-blue-red.png" id="img-taiji" height="200"
         alt="yin yang breath as if in tain ji"/>
 Become aware of your breath and know the inhalation and exhalation process.
 
@@ -138,27 +138,17 @@ The <a href="/event/">Event</a> page has more information of the classes.
 </p>
 
 <table>
-<tr><td>Address:</td>
-<td><address>149 South Blvd, San Mateo, CA 94402</address></td>
+<tr>
+  <td>Address:</td>
+  <td><address>149 South Blvd, San Mateo, CA 94402</address></td>
 </tr>
-<!--
-<tr><td>Time:</td>
-<td>10:00-11:00am every Saturday unless announced otherwise</td>
-</tr>
-<tr><td>Starting date:</td>
-<td>December 3, 2016</td>
-</tr>
-<tr><td>Instructor:</td>
-<td>Lewis Young</td>
-</tr>
-</tr>
-<tr><td>Fee:</td>
-<td>$5-10 sliding-scale donation.
-However, AUM's spirit is that no one is ever turned away due to lack of fund.</td>
-</tr>
- -->
 </table>
 
+
+<div class="page-section">
+<h2 class="section-title">Spiritual Development and Enlightenment</h2>
 <p>
 </p>
+</div>
+
 </div>
