--- a/event.html
+++ b/event.html
@@ -16,7 +16,7 @@ The first one is <strong>Basics of Inner Meditation</strong>, which is like know
 
 It provides students with detailed, step-by-step instructions of how to practice inner meditation.
 
-Its goal is to teach useful techniques so that students will be able to practice on their own at home after learning the class.
+Its goal is to teach useful techniques so that students will be able to practice on their own after the class.
 </p>
 
 <p>
@@ -24,7 +24,7 @@ The second class is <strong>Intermediate Inner Meditation</strong>.
 
 As its name suggests, it targets to people who have practiced inner meditation extensively and want to keep at or advance to certain levels.
 
-The minimum requirement for this class is that a person can meditate by herself for 50 minutes without requiring any instructions.
+The minimum requirement for this class is that a person can meditate by herself for 45 minutes without requiring any instructions.
 
 This class does not provide detailed instructions of how to practice meditation; instead, a person simply joins the class group and practises the way he normally does.
 
@@ -56,7 +56,7 @@ Class schedules are summarized as follows.
 </tr>
 </tr>
 <tr><td>Donation:</td>
-<td>$5-10<sup>*</sup></td>
+<td>$0-10</td>
 </tr>
 </table>
 
@@ -79,20 +79,28 @@ Class schedules are summarized as follows.
 </tr>
 </tr>
 <tr><td>Donation:</td>
-<td>$5-10<sup>*</sup></td>
+<td>$0-10</td>
+</tr>
+<tr>
+  <td>Prerequisite:</td>
+  <td>Able to meditate by youself for 45 minutes</td>
 </tr>
 </table>
 
-<su>*</sup>Please make a donation based on your ability.
+
+<div class="page-section">
+<h2 class="section-title">Fee</h2>
+<p>We call for a sliding scale $10 donation for each class session to support the event, which means please fund us based on your ability.
 
 AUM's policy is that no one is ever turned away due to lack of fund.
 
 If you are curious about this policy then you should check out this <a href="http://www.artsunitymovements.com/">awesome organization</a>.
 </div>
 
-<!--
+
 <div class="page-section">
 <h2 class="section-title">Instructor Bio</h2>
-Lewis Young has practiced meditation for more than a decade. He practiced Qi Gong and was able to heal when he was a university student. Later he studied Taoist inner alchemy and Buddhist Zen meditation. He has taught Taoist inner meditation classes ranging from basics to advanced levels. He holds a Ph.D. degree in Computer Science, and he is good at understanding spiritual tradition with scientific attitude. His teaching style is using simple contemporary concepts to explain inner meditation practices that are considered mysterious.
+<p>
+Lewis Young has practiced meditation for more than a decade. He practiced Qi Gong and was able to heal when he was a university student. Later he studied Taoist inner alchemy and Buddhist Zen meditation. He has taught Taoist inner meditation classes ranging from basic to advanced level. He holds a Ph.D. degree in Computer Science, and he is good at understanding and interpreting spiritual tradition with scientific attitude. His teaching style is using simple contemporary concepts to explain inner meditation practices that are considered mysterious.
+</p>
 </div>
--->
