--- a/event.html
+++ b/event.html
@@ -26,7 +26,7 @@ As its name suggests, it targets to people who have practiced inner meditation e
 
 The minimum requirement for this class is that a person can meditate by herself for 45 minutes without requiring any instructions.
 
-This class does not provide detailed instructions of how to practice meditation; instead, a person simply joins the class group and practises the way he normally does.
+This class does not provide detailed instructions of how to practice meditation; instead, a person simply joins the class group and practices the way he normally does.
 
 From time to time, the class will introduce and practise some special topics or techniques.
 </p>
