--- a/index.html
+++ b/index.html
@@ -39,16 +39,16 @@ Several parts of the body play very important roles in inner meditation, and the
 
 One part is the bottom of the torso, centered around the perineum, which is also a meridian point.
 
-A second part is the spine, which goes from the tip of the tail bone all way up to the base of the skull.
+A second part is the spine.
 
 A third part is the <em>dan tian</em>, also called the center of the body, which is located behind the navel or the belly button and close to the spine.
 
-Other parts include the heart, the center of the brain, the top of the skull, and the central thrusting channel which goes up from the perineum to the top of the skull.
+Other places include the heart, the center of the brain, the top of the skull, and the central thrusting channel which goes up from the perineum to the top of the skull.
 </p>
 
 
 <p>
-  Not all the parts are used together at the beginning of practices.
+  Not all of these places are used together at the beginning of practices.
 
   Basic practices normally involve the perineum, the spine, and the dan tian.
 
@@ -70,10 +70,11 @@ The organs that we meditate about are the liver, heart, spleen, lungs, and kidne
 
 <p>Inner meditation has a broad range of practices, and we do not even attempt to present a comprehensive list of concrete methods.
 
-However, they do share some common characteristics which we discuss on the <a href="/resource/">Resource</a> page.
+However, they do share some common characteristics which we discuss later.
+<!-- on the <a href="/resource/">Resource</a> page.
+-->
 
-
-<p>In order to give a concrete picture of what an inner meditation practice may look like, this section describes one of the simplest but extremely powerful method: the Yin Yang Breath.
+<p>In order to give a concrete picture of what an inner meditation practice may look like, this section describes one of the simplest but extremely powerful methods: the Yin Yang Breath.
 
 It roughly consists of the following steps:
 <ol>
@@ -84,29 +85,33 @@ It roughly consists of the following steps:
         alt="yin yang breath as if in tain ji"/>
 Become aware of your breath and know the inhalation and exhalation process.
 
-Elongate the exhalation process by making it slowly and smoothly; meanwhile focus all intention on perineum.
+Elongate the exhalation process by making it more slowly than normal.
 
-At the end of exhalation, hold the breath until cannot hold, and then release the entire body to let it inhale naturally.
+Meanwhile focus all intention on perineum.
 
-When the body starts the next cycle of breath, repeat the same procedure.
+At the end of exhalation, hold the breath for 5-10 seconds, and then release the entire body to let it inhale naturally.
 
-This is so called the yin breath because the attention and awareness focus on the exhalation process, and exhalation belongs to yin.
+When the body starts the next cycle of breath, repeat the same procedure, i.e., your breath flows smoothly like an endless whirlpool with the following pattern: exhale slowly, hold your breath, and inhale naturally; exhale slowly, hold your breath, and inhale naturally...
+
+This is so called the yin breath because the attention and awareness concentrate with the exhalation process.
 
 After some time, go to the next step.
 
-<li>Lengthen the inhalation process by making it slowly and smoothly; meanwhile focus all intention on perineum.
+<li>Lengthen the inhalation process by making it slowly, and meanwhile focus all intention on perineum.
 
-At the end of inhalation, hold the breath until cannot hold, and then release the entire body to let it exhale naturally.
+At the end of inhalation, hold the breath for 5-10 seconds, and then release the entire body to let it exhale naturally.
 
 When the body starts the next cycle of breath, repeat the same procedure.
 
-This is the yang breath because the attention and awareness focus on the inhalation process, and inhalation belongs to yang.
+This pattern swaps the inhalation and exhalation processes described in the previous step.
+
+This is the yang breath because the attention and awareness become focused with the inhalation process.
 
 This step is normally as twice long as the yin breath.
 
 <li>Finish up.
 
-Be aware of the breath and let it go naturally and use both hands to cover the navel.
+Be aware of the breath and let it go naturally, and use both hands to cover the navel.
 
 Keep the entire body relaxed.
 
@@ -122,7 +127,7 @@ Another example technique is the inner smile, which involves meditating about ea
 </p>
 
 <p>
-<strong>Please note:</strong> just like learning any body or mind related work it may not be beneficial or even risky if you learn on your own because you may not do the right practices.
+<strong>Please note:</strong> just like learning any body or mind related work it may not be beneficial or even risky if you learn on your own because you may not practice with the right form or technique.
 
 The most effective way of learning such skill is studying from an instructor in person, so that any inappropriate movements can be corrected promptly.
 </p>
@@ -134,7 +139,7 @@ The most effective way of learning such skill is studying from an instructor in 
 <p>
 A series of inner meditation classes will be available at <a href="http://www.artsunitymovements.com/aum-center/">Arts Unity Movements Center</a> every Saturday at 10am starting on December 3, 2016.
 
-The <a href="/event/">Event</a> page has more information of the classes.
+The <a href="/event/">Event</a> page has more information.
 </p>
 
 <table>
@@ -144,11 +149,11 @@ The <a href="/event/">Event</a> page has more information of the classes.
 </tr>
 </table>
 
-
+<!--
 <div class="page-section">
 <h2 class="section-title">Spiritual Development and Enlightenment</h2>
-<p>
+<p>Meditation has some well-known benefits for body and mind.
 </p>
 </div>
-
+-->
 </div>
