--- a/event.html
+++ b/event.html
@@ -24,11 +24,11 @@ The second class is <strong>Intermediate Inner Meditation</strong>.
 
 As its name suggests, it targets to people who have practiced inner meditation extensively and want to keep at or advance to certain levels.
 
-The minimum requirement for this class is that a person can meditate by herself for 45 minutes without requiring any instructions.
+The minimum requirement for this class is that a participant can meditate by herself for 45 minutes without requiring any instructions.
 
 This class does not provide detailed instructions of how to practice meditation; instead, a person simply joins the class group and practices the way he normally does.
 
-From time to time, the class will introduce and practise some special topics or techniques.
+However, from time to time the class will introduce some special topics and practice them.
 </p>
 </div>
 
