--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ layout: home
       height="300" alt="inner energy flow"/>
 There are many good meditation practices, and a particular type is inner meditation.
 <!---->
-Unlike some techniques that use music or imagination of external images to help meditating, inner meditation emphasizes focusing on internal parts of a human body, watching to the parts and listening to the parts, namely, concentrating inward on something, not outside.
+Unlike some techniques that use music or imagination of external images to help meditating, inner meditation emphasizes focusing on internal parts of a human body, looking at them and listening to them, namely, concentrating inward on something, not outside.
 <!---->
 It applies few fundamental techniques in concert, which include breath, concentration, relaxation, body postures, and mental power to develop life energy, or <em>qi</em>.
 <!---->
@@ -33,15 +33,15 @@ Of course, it also has relatively well-known benefits that one can obtain throug
 </div>
 
 <div class="page-section">
-<h2 class="section-title">Important Body Parts</h2>
+<h2 class="section-title">Important Body Places</h2>
 <p>
 Several parts of the body play very important roles in inner meditation, and they are the places on which we concentrate our full attention.
 
-One part is the bottom of the torso, centered around the perineum, which is also a meridian point.
+One place is the bottom of the torso, centered around the perineum, which is also a meridian point.
 
-A second part is the spine.
+A second place is the spine.
 
-A third part is the <em>dan tian</em>, also called the center of the body, which is located behind the navel or the belly button and close to the spine.
+A third place is the <em>dan tian</em>, also called the center of the body, which is located behind the navel or the belly button and close to the spine.
 
 Other places include the heart, the center of the brain, the top of the skull, and the central thrusting channel which goes up from the perineum to the top of the skull.
 </p>
