--- a/index.html
+++ b/index.html
@@ -151,9 +151,10 @@ The <a href="/event/">Event</a> page has more information.
 
 <!--
 <div class="page-section">
-<h2 class="section-title">Spiritual Development and Enlightenment</h2>
-<p>Meditation has some well-known benefits for body and mind.
+<h2 class="section-title">Practice Levels</h2>
+<p>
 </p>
 </div>
 -->
+
 </div>
