--- a/resource.html
+++ b/resource.html
@@ -3,28 +3,21 @@ title: Resource
 permalink: /resource/
 ---
 <div class="page-introduction">
-<h2 class="section-title">Body and Mind</h2>
+<h2 class="section-title">Inner Meditation Tradition</h2>
 <p>
 </p>
 </div>
 
 
 <div class="page-section">
-<h2 class="section-title">Inner Meditatioin Tradition</h2>
+<h2 class="section-title">Relationship with Religion</h2>
 <p>
 </p>
 </div>
 
 
 <div class="page-section">
-<h2 class="section-title">Inner Meditation vs Relegion</h2>
-<p>
-</p>
-</div>
-
-
-<div class="page-section">
-<h2 class="section-title">Experiment with a Scientific Approach</h2>
+<h2 class="section-title">A Scientific Approach</h2>
 <p>
 </p>
 </div>
@@ -40,7 +33,7 @@ Therefore, methods that exercise the body can assist and be beneficial to inner 
 These are some example exercises, but not limited to:
 <ul>
   <li>Tai Ji</li>
-  <li>Yaga</li>
+  <li>Yoga</li>
   <li>Martial arts</li>
   <li>Doing a sport with good form and attention</li>
   <li>Working out with good form and attention</li>
