Add a path to spirituality.

--- a/event.html
+++ b/event.html
@@ -22,11 +22,11 @@ Its goal is to teach useful techniques so that students will be able to practice
 <p>
 The second class is <strong>Intermediate Inner Meditation</strong>.
 
-As its name suggests, it targets to people who have practiced inner meditation extensively and want to keep at or advance to certain levels.
+As its name suggests, it targets to people who have practiced inner meditation and want to keep at or advance to certain levels.
 
 The minimum requirement for this class is that a participant can meditate by herself for 45 minutes without requiring any instructions.
 
-This class does not provide detailed instructions of how to practice meditation; instead, a person simply joins the class group and practices the way he normally does.
+This class does not provide detailed meditation instructions; instead, a person simply joins the class group and practices the way he normally does.
 
 However, from time to time the class will introduce some special topics and practice them.
 </p>
