--- a/index.html
+++ b/index.html
@@ -152,42 +152,39 @@ The <a href="/event/">Event</a> page has more information.
 
 
 <div class="page-section">
-<h2 class="section-title">Levels of Inner Meditation</h2>
+<h2 class="section-title">A Path to Spirituality</h2>
 
-<p>From above description, you might have observed that inner meditation starts with some basic body exercises such as breath, body postures, etc. assisted with a concentrated brain.
+<p>The yin yang breath exercise described above suggests a practical path of spiritual development.
 
-This is exactly the case.
+Inner meditation regards a human body as the fundamental building material for higher level spirituality.
 
-Inner meditation regards a human body as the fundamental building material for higher level spiritual development.
-
-Mind activities including spiritual experience are also results of brain activities, and the brain is just an organ of our body which needs energy in order to function.
+Mind activities including spiritual experience are results of brain activities, and the brain is just an organ of our body which needs energy in order to function.
 
 When the brain has more energy, it works better and gives us more spiritual experience.
 </p>
 
 
 <p>
-The way that inner meditation leads to spiritual development is cultivating life energy inside our body.
+Inner meditation emphasizes developing life energy inside our body.
 
-The process starts with the bottom of the torso.
+The process starts at the bottom of the torso which is one of the primary practice centers.
 
-When life energy is enhanced and preserved, it automatically goes up along the spine and other channels.
+When the life energy is enhanced and preserved, it automatically goes up along the spine and the central thrusting channel.
 
-Then we develop more energy in internal organs such as the heart and kidneys.
+Then we develop more energy in organs such as the heart and kidneys.
 
-Afterwards, it goes up again, and we move practice centers up too.
+With persistent practice, it goes up again, and we move practice centers up too.
 
-At certain levels, it reaches the brain, and we also train our brain more to become aware of any subtle mind activities.
+At certain levels, it reaches the brain, and we train our brain to become aware of any subtle mental activities.
 
-With the highly charged life energy, the brain will open up itself and presents us spiritual experience that the brain never generates before including spiritual enlightenment.
+With the highly charged life energy, the brain will open up itself and present the practitioner spiritual experience that the brain never generates before, and this new experience includes spiritual enlightenment.
 </p>
 
 
-<p>In this framework of meditation, we can roughly draw a line between mastering practice techniques and starting to perceive that the life energy becomes strong enough at the bottom of the torso to move up.
+<p>In this framework of meditation, spiritual development and enlightenment is natural results of cultivating the life energy.
 
-Before the line, a person needs to learn the basics and keep practicing them.
-
-
+This is also a safe approach because it builds solid foundation in the body before the brain is activated to generate transcendent experience.
 </p>
+
 </div>
 
