--- a/event.html
+++ b/event.html
@@ -83,10 +83,17 @@ Class schedules are summarized as follows.
 </tr>
 <tr>
   <td>Prerequisite:</td>
-  <td>Able to meditate by youself for 45 minutes</td>
+  <td>Able to meditate by yourself for 45 minutes</td>
+</tr>
+<tr>
+  <td>Equipment:</td>
+  <td>A mat which you can comfortably sit on. A covering sheet if you need it.</td>
 </tr>
 </table>
 
+<p style="margin-top: 2ex">
+<strong>Note about equipment:</strong> The AUM center has chairs, and participants of the Basics of Inner Meditation class do not need to bring any equipment. But it is perfectly OK if you prefer sitting on your mat. In that case, feel free to bring your own mat to the class. There are also few yoga mats in the center but the quantity is very limited. Please do not count on them.
+<p>
 
 <div class="page-section">
 <h2 class="section-title">Fee</h2>
