Add spirituality page

--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@ For female, circle clockwise first and then counterclockwise.
 
 
 <p>
-Another example technique is the inner smile, which involves meditating about each organ mentioned above and transforms negative emotion into positive energy.
+Another example technique is <a href="http://www.universal-tao.com/article/smile.html">the inner smile</a>, which involves meditating about each organ mentioned above and transforms negative emotion into positive energy.
 </p>
 
 <p>
@@ -186,5 +186,8 @@ With the highly charged life energy, the brain will open up itself and present t
 This is also a safe approach because it builds solid foundation in the body before the brain is activated to generate transcendent experience.
 </p>
 
+
+<p>Of course, this is a highly simplified description. The <a href="/spirituality/">spirituality</a> page has more information.
+</p>
 </div>
 
