Clean up little for publishing.

--- a/spirituality.html
+++ b/spirituality.html
@@ -7,6 +7,8 @@ permalink: /spirituality/
 <h1 class="page-title">A Safe and Balanced Path to Spirituality</h1>
 </div>
 
+Is coming...
+
 <div class="page-introduction">
 <h2 class="section-title"></h2>
 <p>
