Clean up little for publishing.

--- a/event.html
+++ b/event.html
@@ -36,8 +36,6 @@ However, from time to time the class will introduce some special topics and prac
 <div class="page-section">
 <h2 class="section-title">Schedule</h2>
 
-Class schedules are summarized as follows.
-
 <table>
   <caption class="class-name">Basics of Inner Meditation</caption>
 <tr>
@@ -87,7 +85,7 @@ Class schedules are summarized as follows.
 </tr>
 <tr>
   <td>Equipment:</td>
-  <td>A mat which you can comfortably sit on. A covering sheet if you need it.</td>
+  <td>A mat which you can comfortably sit on. A covering blanket if you need it.</td>
 </tr>
 </table>
 
