--- a/spirituality.html
+++ b/spirituality.html
@@ -7,7 +7,7 @@ permalink: /spirituality/
 <h1 class="page-title">A Safe and Balanced Path to Spirituality</h1>
 </div>
 
-Is coming...
+It is coming...
 
 <div class="page-introduction">
 <h2 class="section-title"></h2>
