Use only html_pages to generate title.

--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@ For female, circle clockwise first and then counterclockwise.
 
 
 <p>
-Another example technique is <a href="http://www.universal-tao.com/article/smile.html">the inner smile</a>, which involves meditating about each organ mentioned above and transforms negative emotion into positive energy.
+Another example technique is the <a href="http://www.universal-tao.com/article/smile.html">inner smile</a>, which involves meditating about each organ mentioned above and transforms negative emotion into positive energy.
 </p>
 
 <p>
