--- a/resource.html
+++ b/resource.html
@@ -36,8 +36,10 @@ These are some example exercises, but not limited to:
   <li>Tai Ji</li>
   <li>Yoga</li>
   <li>Martial arts</li>
-  <li>Doing a sport with good form and attention</li>
-  <li>Working out with good form and attention</li>
+  <li>Sport</li>
+  <li>Workout</li>
 </ul>
+</p>
+<p>Just like doing any body work, keeping good forms is extremely important in any of those exercises.
 </p>
 </div>
