--- a/index.html
+++ b/index.html
@@ -111,9 +111,9 @@ This step is normally as twice long as the yin breath.
 
 <li>Finish up.
 
-Be aware of the breath and let it go naturally, and use both hands to cover the navel.
+Be aware of dan tian and let the breath go naturally.
 
-Keep the entire body relaxed.
+Use both hands to cover the navel and keep the entire body relaxed.
 
 For male, circle both hands around the navel 36 times counterclockwise and then 36 times in the opposite direction.
 
@@ -123,7 +123,7 @@ For female, circle clockwise first and then counterclockwise.
 
 
 <p>
-Another example technique is the <a href="http://www.universal-tao.com/article/smile.html">inner smile</a>, which involves meditating about each organ mentioned above and transforms negative emotion into positive energy.
+Another example practice is the <a href="http://www.universal-tao.com/article/smile.html">inner smile</a>, which involves meditating about each organ mentioned above and transforms negative emotion into positive energy.
 </p>
 
 <p>
@@ -137,17 +137,11 @@ The most effective way of learning such skill is studying from an instructor in 
 <div class="page-section">
 <h2 class="section-title">Inner Meditation Classes</h2>
 <p>
-A series of inner meditation classes will be available at <a href="http://www.artsunitymovements.com/aum-center/">Arts Unity Movements Center</a> every Saturday at 10am starting on December 3, 2016.
+A series of inner meditation classes will be available at <a href="http://www.artsunitymovements.com/aum-center/">Arts Unity Movements Center</a> every Saturday starting on December 3, 2016.
 
 The <a href="/event/">Event</a> page has more information.
 </p>
 
-<table>
-<tr>
-  <td>Address:</td>
-  <td><address>149 South Blvd, San Mateo, CA 94402</address></td>
-</tr>
-</table>
 </div>
 
 
