Add transforming sexual energy.

--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 # Edit theme's home layout instead if you wanna make some changes
 # See: https://jekyllrb.com/docs/themes/#overriding-theme-defaults
 layout: home
+date:   2016-12-02 19:06:33 -0800
 ---
 
-<div class="page-introduction">
+<div class="page-introduction" id="introduction">
 <h2 class="section-title">Introduction</h2>
 <p>
 <img id="img-inner-orbit" src="images/orbits-points.png"
@@ -16,7 +17,7 @@ Unlike some techniques that use music or imagination of external images to help 
 <!---->
 It applies few fundamental techniques in concert, which include breath, concentration, relaxation, body postures, and mental power to develop life energy, or <em>qi</em>.
 <!---->
-The development of qi inside one's body enhances overall wellness of health and leads to a path of spiritual enlightenment.
+The development of qi inside one's body enhances health, maintains wellness, and leads to a path of spiritual enlightenment.
 </p>
 
 <p>
@@ -65,7 +66,7 @@ The organs that we meditate about are the liver, heart, spleen, lungs, and kidne
 </p>
 </div>
 
-<div class="page-section">
+<div class="page-section" id="basicPractice">
 <h2 class="section-title">Basic Practices</h2>
 
 <p>Inner meditation has a broad range of practices, and we do not even attempt to present a comprehensive list of concrete methods.
@@ -111,9 +112,9 @@ This step is normally as twice long as the yin breath.
 
 <li>Finish up.
 
-Be aware of dan tian and let the breath go naturally.
+Let the breath go naturally.
 
-Use both hands to cover the navel and keep the entire body relaxed.
+Be aware of dan tian, and use both hands to cover the navel and keep the entire body relaxed.
 
 For male, circle both hands around the navel 36 times counterclockwise and then 36 times in the opposite direction.
 
@@ -145,10 +146,10 @@ The <a href="/event/">Event</a> page has more information.
 </div>
 
 
-<div class="page-section">
-<h2 class="section-title">A Path to Spirituality</h2>
+<div class="page-section" id="spirituality">
+<h2 class="section-title">A Path to Health, Wellness, and Spirituality</h2>
 
-<p>The yin yang breath exercise described above suggests a practical path of spiritual development.
+<p>The <a href="#basicPractice">yin yang breath</a> exercise described above suggests a practical path of spiritual development.
 
 Inner meditation regards a human body as the fundamental building material for higher level spirituality.
 
@@ -175,13 +176,33 @@ With the highly charged life energy, the brain will open up itself and present t
 </p>
 
 
+<p>This process improves one's health from the very beginning when a person starts to develop the life energy at the bottom of the torso.
+
+That part of a human body has tremendous amount of sexual energy.
+
+It is very difficult for a normal person to control and utilize the sexual energy when it builds up.
+
+Inner meditation practices transform the sexual energy into life energy, and the latter circulates inside the body and nourishes tissues and organs.
+
+This greatly enhances a person's immune system and improves his health.
+
+In addition, the life energy helps him maintain a relatively high energy level which is very useful in dealing with his daily life.
+</p>
+
+
 <p>In this framework of meditation, spiritual development and enlightenment is natural results of cultivating the life energy.
 
 This is also a safe approach because it builds solid foundation in the body before the brain is activated to generate transcendent experience.
 </p>
 
 
-<p>Of course, this is a highly simplified description. The <a href="/spirituality/">spirituality</a> page has more information.
+<p>Of course, this is a highly simplified description. We will discuss more <a href="/spirituality/">here</a>.
 </p>
 </div>
 
+
+<div class="page-section">
+<h2 class="section-title"></h2>
+<p>
+</p>
+</div>
