--- a/spirituality.html
+++ b/spirituality.html
@@ -1,10 +1,11 @@
 ---
 title: Spirituality
 permalink: /spirituality/
+date:   2016-12-02 19:06:33 -0800
 ---
 
 <div class="page-title">
-<h1 class="page-title">A Safe and Balanced Path to Spirituality</h1>
+<h1 class="page-title">Inner Meditation, Life Energy, and Spirituality</h1>
 </div>
 
 It is coming...
